--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </section> -->
 
       <!-- Секція Про нас -->
-      <section class="about section">
+      <!-- <section class="about section">
         <div class="container about-container">
           <ul class="about-list list">
             <li class="about-item">
@@ -173,10 +173,10 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Послуги та ціни -->
-      <section class="price section">
+      <!-- <section class="price section">
         <div class="container">
           <p class="uppertitle uppertitle--mode-dark">
             Проведи время в компании лучших мастеров
@@ -230,10 +230,10 @@
             онлайн-запись
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Переваги -->
-      <section class="advantages section">
+      <!-- <section class="advantages section">
         <div class="container advantages-container">
           <div class="advantages-left-side">
             <ul class="advantages-list list">
@@ -269,10 +269,10 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Майстри -->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <p class="uppertitle uppertitle--mode-light">
             для настоящих ценителей атмосферы
@@ -445,10 +445,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Галерея -->
-      <section class="gallery section">
+      <!-- <section class="gallery section">
         <div class="container">
           <p class="uppertitle uppertitle--mode-light">
             На латинском языке “барба” означает “борода”
@@ -493,7 +493,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Контакти -->
       <section class="contacts section">
