--- a/index.html
+++ b/index.html
@@ -668,6 +668,40 @@
       </div>
     </div>
 
+    <!-- Мобильное окно -->
+
+    <div class="mobile-overlay">
+      <div class="mobile-menu">
+        <nav>
+          <ul class="mobile-nav__list list">
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="">О нас</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="">Услуги и цены</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="">Мастера</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a class="mobile-nav__link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+  
+        <div class="mobile-menu__contacts">
+          <a class="mobile-menu__link link" href="tel:+380441111111">+38 044 111 1 1 11</a>
+          <button class="mobile-menu__btn">
+            онлайн-запись
+          </button>
+        </div>
+        <ul class="socials">
+          <li class="socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+          <li class="socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+        </ul>      
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
     <script src="./js/form-btn.js"></script>
   </body>
