--- a/index.html
+++ b/index.html
@@ -670,9 +670,9 @@
 
     <!-- Мобильное окно -->
 
-    <div class="mobile-overlay">
+    <div class="mobile-overlay" data-menu>
       <div class="mobile-menu">
-        <nav>
+        <nav class="mobile-nav">
           <ul class="mobile-nav__list list">
             <li class="mobile-nav__item">
               <a class="mobile-nav__link link" href="">О нас</a>
