--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </header>
 
-    <!-- <div class="contacts-row container">
+    <div class="contacts-row container">
       <ul class="list">
         <li class="item">
           <a class="link" href="">
@@ -110,7 +110,7 @@
           </a>
         </li>
       </ul>
-    </div> -->
+    </div>
 
     <!-- Уникальный контент -->
     <main>
@@ -703,6 +703,7 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
     <script src="./js/form-btn.js"></script>
   </body>
 </html>
