--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       </section> -->
 
       <!-- Секція Переваги -->
-      <!-- <section class="advantages section">
+      <section class="advantages section">
         <div class="container advantages-container">
           <div class="advantages-left-side">
             <ul class="advantages-list list">
@@ -275,10 +275,10 @@
             </ul>
           </div>
           <div class="advantages-right-side">
-            <p class="uppertitle uppertitle--mode-light">
+            <p class="uppertitle advantages_uppertitle uppertitle--mode-light">
               старая традиционная школа
             </p>
-            <h2 class="title title--mode-light">
+            <h2 class="title advantages_title title--mode-light">
               Почему приходят именно к нам?
             </h2>
             <p class="subtitle subtitle--mode-light">
@@ -287,15 +287,15 @@
             </p>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Майстри -->
-      <!-- <section class="team section">
-        <div class="container">
-          <p class="uppertitle uppertitle--mode-light">
+      <section class="team section">
+        <div class="container team_container">
+          <p class="uppertitle team_uppertitle uppertitle--mode-light">
             для настоящих ценителей атмосферы
           </p>
-          <h2 class="title title--mode-light">Наши мастера</h2>
+          <h2 class="title team_title title--mode-light">Наши мастера</h2>
           <ul class="team-list list">
             <li class="team-member team-member--primary">
               <div class="team-thumb">
@@ -463,12 +463,12 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Галерея -->
-      <!-- <section class="gallery section">
+      <section class="gallery section">
         <div class="container">
-          <p class="uppertitle uppertitle--mode-light">
+          <p class="uppertitle gallery_uppertitle uppertitle--mode-light">
             На латинском языке “барба” означает “борода”
           </p>
           <h2 hidden>Галерея Барбершопа</h2>
@@ -511,7 +511,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Контакти -->
       <!-- <section class="contacts section">
