--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
     </header>
 
-    <div class="contacts-row container">
+    <!-- <div class="contacts-row container">
       <ul class="list">
         <li class="item">
           <a class="link" href="">
@@ -110,7 +110,7 @@
           </a>
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- Уникальный контент -->
     <main>
@@ -148,7 +148,7 @@
       </section> -->
 
       <!-- Секція Про нас -->
-      <!-- <section class="about section">
+      <section class="about section">
         <div class="container about-container">
           <ul class="about-list list">
             <li class="about-item">
@@ -191,16 +191,53 @@
             </button>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Послуги та ціни -->
-      <!-- <section class="price section">
-        <div class="container">
+      <section class="price__section section">
+        <div class="price price__container container">
           <p class="uppertitle uppertitle--mode-dark">
             Проведи время в компании лучших мастеров
           </p>
           <h2 class="title title--mode-dark">Услуги и цены</h2>
-          <ul class="price-list list">
+          <ul class="price-item price__list price__list-column list">
+            <li class="price-inner-item">
+              <span class="price-inner-name">Мужская стрижка</span
+              ><span class="price-inner-cost">от 300 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Стрижка бороды</span
+              ><span class="price-inner-cost">от 200 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Стрижка усов</span
+              ><span class="price-inner-cost">от 200 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Бритье опасной бритвой</span
+              ><span class="price-inner-cost">от 200 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Cтрижка у стажера</span>
+              <span class="price-inner-cost">от 50 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Стрижка под насадку</span>
+              <span class="price-inner-cost">от 200 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name"
+                >Детская стрижка (до 12 лет)</span
+              >
+              <span class="price-inner-cost">от 300 грн.</span>
+            </li>
+            <li class="price-inner-item">
+              <span class="price-inner-name">Камуфлирование седины</span>
+              <span class="price-inner-cost">от 200 грн.</span>
+            </li>
+          </ul>
+
+          <ul class="price__list price__list-row list">
             <li class="price-item price-item-left-side">
               <ul class="price-inner-list list">
                 <li class="price-inner-item">
@@ -248,7 +285,7 @@
             онлайн-запись
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Переваги -->
       <section class="advantages section">
