--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+
     <!-- Шапка сайту -->
-    <header class="header">
+
+    <header class="header" data-header>
       <div class="container header__container">
-        <a class="header__link" href="./index.html">
-          <img
-            class="header__logo"
-            src="./images/icons/logo.svg"
-            alt="Лого"
-            width="68"
-            height="55"
-          />
+        <a class="header__logo logo" href="./index.html" aria-label="Логотип">
+          <svg class="logo__icon" width="69" height="56">
+            <use
+              href="./images/icons.svg#icon-Logo"
+            ></use>
+          </svg>
         </a>
         <button
           class="menu-btn"
@@ -115,8 +115,9 @@
     <!-- Уникальный контент -->
     <main>
       <!-- Секція Герой -->
-      <!-- <section class="hero">
-        <div class="container">
+      <section class="hero">
+
+        <div class="hero__container container">
           <ul class="list hero__list">
             <li class="hero__item">
               <a class="link public-link" href="" lang="en">Instagram</a>
@@ -145,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Секція Про нас -->
       <section class="about section">
