--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Шапка сайту -->
 
-    <header class="header" data-header id="header">
+    <header class="header" id="header" data-header>
       <div class="container header__container">
         <a class="header__logo logo" href="./index.html" aria-label="Логотип">
           <svg class="logo__icon" width="69" height="56">
@@ -62,7 +62,7 @@
               <a class="link nav__link nav__link--current" href="#about">О нас</a>
             </li>
             <li class="nav__item">
-              <a class="link nav__link" href="">Услуги и цены</a>
+              <a class="link nav__link" href="#price">Услуги и цены</a>
             </li>
             <li class="nav__item">
               <a class="link nav__link" href="#team">Мастера</a>
@@ -114,36 +114,59 @@
     <!-- Уникальный контент -->
     <main>
       <!-- Секція Герой -->
-      <section class="hero" id="hero">
+    <section class="hero" id="hero">
 
-        <div class="hero__container container">
-          <ul class="list hero__list">
-            <li class="hero__item">
-              <a class="link public-link" href="" lang="en">Instagram</a>
-            </li>
-            <li class="hero-item">
-              <a class="link public-link" href="" lang="en">Youtube</a>
-            </li>
-          </ul>
-          <p class="uppertitle uppertitle--mode-dark" lang="en">
-            A hair salon for men in Kyiv
-          </p>
-          <h1 class="hero__title">BarberShop</h1>
-          <p class="subtitle subtitle--mode-dark hero__subtitle">
-            Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и
-            со вкусом.
-          </p>
+        <div class="hero-container container">
+          <div class="hero-left-side">
+            <ul class="list hero__list social-links-list">
+              <li class="social-links-item">
+                <a 
+                class="link social-links-item-link" 
+                href="" 
+                lang="en"
+                target="_blank"
+                rel="noopener noreferrer">Instagram</a>
+              </li>
+              <li class="social-links-item">
+                <a 
+                class="link social-links-item-link" 
+                href="" 
+                lang="en"
+                target="_blank"
+                rel="noopener noreferrer">Youtube</a>
+              </li>
+            </ul>
+          </div>
 
-          <ul class="list hero__list">
-            <li class="hero__item">
-              <button class="hero__btn hero__btn--disable" type="button">
-                Назад
-              </button>
-            </li>
-            <li class="hero__item">
-              <button class="hero__btn" type="button">Вперед</button>
-            </li>
-          </ul>
+          <div class="hero-right-side">
+            <p class="uppertitle uppertitle--mode-dark" lang="en">
+              A hair salon for men in Kyiv
+            </p>
+            <h1 class="main-title">BarberShop</h1>
+            <p class="subtitle subtitle--mode-dark">
+              Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и
+              со вкусом.
+            </p>
+          </div>
+
+          <div class="slider">
+            <ul class="slider__pagination list">
+              <li class="slider__item slider__item--active"></li>
+              <li class="slider__item"></li>
+              <li class="slider__item"></li>
+            </ul>
+              
+            <ul class="list slider-controls">
+              <li class="slider__item-controls">
+                <button class="slider__btn slider__btn--disable" type="button">
+                  Назад
+                </button>
+              </li>
+              <li class="slider__item-controls">
+                <button class="slider__btn" type="button">Вперед</button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -218,7 +241,7 @@
       </section>
 
       <!-- Секція Послуги та ціни -->
-      <section class="price__section section" id="price">
+      <!-- <section class="price__section section" id="price">
         <div class="price price__container container">
           <p class="uppertitle uppertitle--mode-dark">
             Проведи время в компании лучших мастеров
@@ -309,10 +332,10 @@
             онлайн-запись
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Переваги -->
-      <section class="advantages section">
+      <!-- <section class="advantages section">
         <div class="container advantages-container">
           <div class="advantages-left-side">
             <ul class="advantages-list list">
@@ -348,10 +371,10 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Майстри -->
-      <section class="team section" id="team">
+      <!-- <section class="team section" id="team">
         <div class="container team_container">
           <p class="uppertitle team_uppertitle uppertitle--mode-light">
             для настоящих ценителей атмосферы
@@ -524,10 +547,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Галерея -->
-      <section class="gallery section">
+      <!-- <section class="gallery section">
         <div class="container">
           <p class="uppertitle gallery_uppertitle uppertitle--mode-light">
             На латинском языке “барба” означает “борода”
@@ -572,10 +595,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Секція Контакти -->
-      <section class="contacts section" id="contacts">
+      <!-- <section class="contacts section" id="contacts">
         <div class="container contacts-container">
           <div class="contacts-left-side">
             <h2 class="title title--mode-dark">Онлайн-запись</h2>
@@ -698,7 +721,7 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Підвал сайту -->
@@ -720,10 +743,10 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal-wrapper">
         <!-- <button class="modal-btn" type="button" data-modal-close>X</button> -->
-        <button class="modal-btn" data-modal-close>
+        <!-- <button class="modal-btn" data-modal-close>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 320 512"
+            viewBox="0 0 32 51"
             width="18"
             height="18"
           >
@@ -731,7 +754,7 @@
               d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
             />
           </svg>
-        </button>
+        </button> -->
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur,
           ipsum.
@@ -774,6 +797,7 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/header-scroll.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/form-btn.js"></script>
   </body>
