--- a/index.html
+++ b/index.html
@@ -78,10 +78,47 @@
             +38 044 111 11 11
           </a>
           <button
-            class="main-btn main-btn--mode-dark header__btn"
+            class="btn btn--mode-dark header__btn"
             type="button"
             data-modal-open><span>онлайн-запись</span>
           </button>
+
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal-wrapper">
+              <button class="modal-btn" data-modal-close>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 320 512"
+                  width="18"
+                  height="18"
+                >
+                  <path
+                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
+                  />
+                </svg>
+              </button>
+
+              <strong class="modal-title">Оставьте заявку на стрижку</strong>
+              <form class="modal-form">
+                <!-- дані відвідувача -->
+                <label class="modal-form__group">
+                  <span class="modal-form__label">Имя</span>
+                  <input
+                    class="modal-form__input"
+                    type="text"
+                    name="user-name"
+                    minlength="3"
+                    placeholder=" "
+                    required
+                  />
+                  <span class="alert alert--warning">
+                    Имя должно состоять минимум из 3 символов
+                  </span>
+                  <svg class="alert-icon alert-icon--warning" width="18" height="18">
+                    <use href="./images/form-sprite.svg#icon-warning"></use>
+                  </svg>
+            </div>
+          </div>
         </div>
       </div>
     </header>
