--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
                   <svg class="alert-icon alert-icon--warning" width="18" height="18">
                     <use href="./images/form-sprite.svg#icon-warning"></use>
                   </svg>
+                </label> 
+              </form>   
             </div>
-          </div>
+          </div>  
         </div>
       </div>
     </header>
