--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
           type="button"
           aria-label="Кнопка открытия меню"
           aria-expanded="false"
-          data-menu-button
-        >
+          data-menu-button>
+        
           <svg class="menu-btn__icon" width="44" height="44">
             <use
               class="menu-btn__icon-open"
@@ -88,7 +88,7 @@
               <button class="modal-btn" data-modal-close>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 320 512"
+                  viewbox="0 0 320 512"
                   width="18"
                   height="18"
                 >
@@ -195,7 +195,7 @@
               <li class="slider__item"></li>
             </ul>
               
-            <ul class="list slider-controls">
+            <ul class="slider-controls list">
               <li class="slider__item-controls">
                 <button class="slider__btn slider__btn--disable" type="button">
                   Назад
@@ -272,7 +272,7 @@
               клиентами "на одной волне". Поэтому, мы всегда готовы
               усовершенствовать каждого, кто к нам приходит!
             </p>
-            <button class="main-btn main-btn--mode-light" type="button">
+            <button class="btn btn--mode-light" type="button">
               онлайн-запись
             </button>
           </div>
@@ -753,37 +753,55 @@
 
     <!-- Мобильное окно -->
 
-    <div class="mobile-overlay" data-menu>
+    <div class="mobile-menu" data-menu>
+      <ul class="mobile-menu-nav list">
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-nav__link link current" href="">О нас</a>
+        </li>
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-nav__link link" href="">Услуги и цены</a>
+        </li>
+        <li class="mobile-menu-navv__item">
+          <a class="mobile-nav__link link" href="">Мастера</a>
+        </li>
+        <li class="mobile-menu-nav__item">
+          <a class="mobile-nav__link link" href="">Контакты</a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- <div class="mobile-overlay" data-menu>
       <div class="mobile-menu">
-        <nav class="mobile-nav">
+        <nav class="mobile-menu-nav">
           <ul class="mobile-nav__list list">
-            <li class="mobile-nav__item">
+            <li class="mobile-menu-nav__item">
               <a class="mobile-nav__link link" href="">О нас</a>
             </li>
-            <li class="mobile-nav__item">
+            <li class="mobile-menu-nav__item">
               <a class="mobile-nav__link link" href="">Услуги и цены</a>
             </li>
-            <li class="mobile-nav__item">
+            <li class="mobile-menu-navv__item">
               <a class="mobile-nav__link link" href="">Мастера</a>
             </li>
-            <li class="mobile-nav__item">
+            <li class="mobile-menu-nav__item">
               <a class="mobile-nav__link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
   
         <div class="mobile-menu__contacts">
-          <a class="mobile-menu__link link" href="tel:+380441111111">+38 044 111 1 1 11</a>
+          <a class="mobile-menu__link link" 
+          href="tel:+380441111111">+38 044 111 1 1 11</a>
           <button class="mobile-menu__btn">
             онлайн-запись
           </button>
         </div>
-        <ul class="socials">
-          <li class="socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-          <li class="socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
+        <ul class="mobile-menu-socials">
+          <li class="mobile-menu-socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+          <li class="mobile-menu-socials__item"><a class="socials__link" href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
         </ul>      
       </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
     <script src="./js/header-scroll.js"></script>
